--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -44,7 +44,7 @@ header {
     padding: 12px 32px;
     position: sticky;
     top: 10px;
-    
+    border-radius: 14px;
 }
 
 header .galeria\logo.png {
