--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -46,6 +46,7 @@ header {
     top: 10px;
     border-radius: 14px;
     z-index: 1100;
+    box-shadow: 0 8px 30px rgba(0,0,0,0.6);
 }
 
 header .galeria\logo.png {
