--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -64,6 +64,7 @@ header img:hover { transform: scale(1.04) rotate(-1deg); }
   position:relative;
   text-decoration:none;
   color:var(--text);
+  font-weight:600;
 
 }
 
