--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -65,6 +65,7 @@ header img:hover { transform: scale(1.04) rotate(-1deg); }
   text-decoration:none;
   color:var(--text);
   font-weight:600;
+  font-size:15px;
 
 }
 
