--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -67,6 +67,7 @@ header img:hover { transform: scale(1.04) rotate(-1deg); }
   font-weight:600;
   font-size:15px;
   padding:6px 4px;
+  transition: color var(--transition-fast), transform var(--transition-fast);
 
 }
 
