--- a/css/contactos.css
+++ b/css/contactos.css
@@ -171,6 +171,18 @@ body {
 }
 
 .boton-le::before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  border-radius: 12px;
+  background: linear-gradient(270deg, rgb(171, 17, 17), rgb(50, 2, 2), rgb(255, 0, 0));
+  background-size: 600% 600%;
+  z-index: -1;
+  animation: brillo 4s linear infinite;
+  filter: blur(2px);
 
 .boton-le {
   background-color: #00000000;
