--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -87,6 +87,13 @@ header img:hover { transform: scale(1.04) rotate(-1deg); }
 #navegacion a:hover::after,
 #navegacion a.activo::after { transform: scaleX(1); }
 
+header.scrolled {
+    padding:8px 22px;
+    box-shadow: 0 12px 36px rgba(0,0,0,0.7);
+    transform: translateY(-4px);
+}
+
+
 main > h1 {
   margin-top: 40px;
   text-align: center;
