--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -96,6 +96,15 @@ h1, h2 {
     color: #fff;
     letter-spacing: 0.6px;
 }
+h1 {
+    font-size:2.6rem;
+    margin-bottom:18px;
+    text-align:center;
+    line-height:1.05;
+    text-shadow: 0 2px 18px rgba(0,0,0,0.7);
+}
+
+
 
 main > h1 {
   margin-top: 40px;
