--- a/css/contactos.css
+++ b/css/contactos.css
@@ -198,6 +198,9 @@ body {
 }
 
 @keyframes brillo {
+   0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 
 .boton-le {
   background-color: #00000000;
