--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -206,5 +206,10 @@ section {
     position:relative;
 }
 
+section:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 18px 46px rgba(0,0,0,0.75);
+}
+
 
 
