--- a/css/contactos.css
+++ b/css/contactos.css
@@ -23,6 +23,10 @@ body {
   opacity: 0.8;
   z-index: 0;
 }
+@keyframes flotar{
+  0% { transform: translateY(0) scale(1);  opacity: 0.8; }
+  100% { transform: translateY(-120vh) scale(0.5); opacity: 0; }
+  
 .header {
   position: sticky;
   top: 0;
