--- a/css/contactos.css
+++ b/css/contactos.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  background: linear-gradient(135deg, #121212, #1111, #121212);
 }
 
 :root {
