--- a/css/contactos.css
+++ b/css/contactos.css
@@ -4,6 +4,9 @@ body {
   padding: 0;
   overflow-x: hidden;
   background: linear-gradient(135deg, #121212, #1111, #121212);
+  background-size: 300% 300%;
+  animation: moverFondo 15s ease infinite;
+   position: relative;
 }
 
 :root {
