Agregando etiqueta keyframes

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -8,7 +8,7 @@ body {
   animation: moverFondo 15s ease infinite;
    position: relative;
 }
-
+@keyframes moverFondo {
 
 :root {
   --text: #ffffff;
