--- a/css/contactos.css
+++ b/css/contactos.css
@@ -9,6 +9,9 @@ body {
    position: relative;
 }
 @keyframes moverFondo {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 
 :root {
   --text: #ffffff;
