--- a/css/contactos.css
+++ b/css/contactos.css
@@ -75,7 +75,7 @@ body {
   color:red;
   font-weight: bold;
   padding: 8px 12px;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition:0.3s;
 }
 .contacto-junto {
   text-align: center;
