--- a/css/contactos.css
+++ b/css/contactos.css
@@ -127,9 +127,11 @@ body {
 }
 /*modifica esto */
 .contacto:hover {
-  color: #fff;
+  transform: scale(1.07);
+  box-shadow: 0 0 25px #830808cc;
+}
+.contacto h3 {
   margin-bottom: 15px;
-  font-size: 16px;
   font-weight: bold;
 }
 .contacto img {
