--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,11 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    color: #fff;
     background-color: #000;
 }
 
