--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,16 @@ body {
     transition: transform 0.4s ease-out;
 }
 
+.logo img:hover {
+    transform: scale(1.1);
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 30px;
+}
+
 
 .hero-section {
     width: 100%;
@@ -71,18 +81,8 @@ body {
     z-index: 2;
 }
 
-.nav-links {
-    list-style: none;
-    display: flex;
-    gap: 30px;
-}
 
-.nav-links a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    transition: color 0.3s;
-}
+
 
 .nav-links a:hover {
     color: #f00; 
