Agregando transicion al selector root

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -20,6 +20,7 @@ body {
   --speed: 0.3s;
   --brand: #ff0000;
   --brand-2: #cc0000;
+  --transition-fast: 180ms;
 }
 .particula {
   position: fixed;
@@ -53,6 +54,7 @@ body {
     box-shadow: 0 8px 30px rgba(0,0,0,0.6);
     transition: transform var(--transition-fast), box-shadow var(--transition-fast), background var(--transition-fast);
 }
+
 
 .logo img{
   height: 50px;
