Agregando efecto a header

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -54,6 +54,9 @@ body {
     box-shadow: 0 8px 30px rgba(0,0,0,0.6);
     transition: transform var(--transition-fast), box-shadow var(--transition-fast), background var(--transition-fast);
 }
+header:hover { 
+  transform: translateY(-2px);
+ }
 
 
 .logo img{
