--- a/css/index.css
+++ b/css/index.css
@@ -48,23 +48,26 @@ body {
 }
 
 .nav-links a {
-    
+   color: #fff;
+   text-decoration: none;
+   font-weight: bold;
+   transition: color 0.3s; 
 }
 
+.nav-links a:hover {
+    color: #f00; 
+}
 
 .hero-section {
+    position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url('../img/imgg.jpg'); 
-    background-size: cover;
+    background-image: url(galeria/fondo.jpeg);
     background-position: center;
     background-repeat: no-repeat;
-    position: relative;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    background-size: cover;
+    background-attachment: fixed;
+    display: block;    
 }
 
 .overlay {
