--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,12 @@ body {
 }
 
 
-
+.text-content {
+    position: relative;
+    max-width: 700px;
+    margin-left: 50px;
+    overflow: hidden;
+}
 
 
 .navbar {
@@ -100,17 +105,6 @@ body {
 
 
 
-
-.text-content h1 {
-    font-size: 3em;
-    margin-bottom: 20px;
-    font-weight: 700;
-}
-
-.text-content p {
-    font-size: 1.2em;
-    font-weight: 300;
-}
 
 .main-footer {
     width: 100%;
