--- a/css/index.css
+++ b/css/index.css
@@ -97,6 +97,12 @@ body {
     overflow: hidden;
 }
 
+.text-content h1,
+.text-content p {
+    opacity: 0; 
+   
+}
+
 
 .navbar {
     position: relative;
