--- a/css/index.css
+++ b/css/index.css
@@ -99,8 +99,19 @@ body {
 
 .text-content h1,
 .text-content p {
-    opacity: 0; 
-   
+    opacity: 0;  
+}
+ 
+
+@keyframes fade-in-up {
+    0%{
+        opacity: 0;
+        transform: translateY(20px);
+    }
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 
