--- a/css/contactos.css
+++ b/css/contactos.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  background: linear-gradient(135deg, );
+  background: linear-gradient(135deg, rgb(6, 6, 6) , rgb(35, 35, 35) , rgba(22, 22, 22, 0.701));
   background-size: 300% 300%;
   animation: moverFondo 15s ease infinite;
    position: relative;
