Fin de modificación

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -154,6 +154,10 @@ header:hover {
   font-weight: bold;
 }
 .contacto img {
+  display: block;
+  margin: 20px auto;
+  max-width: 80px;
+  transition: 0.3s;
 }
 .contacto img:hover{
   transform: scale(1.1);
