--- a/css/contactos.css
+++ b/css/contactos.css
@@ -182,8 +182,17 @@ header:hover {
   margin-top: 20px;
 }
 .main-footer {
-
-
+  width: 100%;
+  background-color: #000; 
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+}
 
 
 
