--- a/css/contactos.css
+++ b/css/contactos.css
@@ -183,17 +183,15 @@ header:hover {
 }
 .main-footer {
   width: 100%;
-  background-color: #000; 
-  color: #fff;
+  background-color: #000; /* fondo negro */
+  color: #fff; /* texto blanco */
   text-align: center;
   padding: 20px 0;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 10;
-}
-
+  z-index: 10;}
 
 
 /*añadi aca tu parte */
