--- a/css/contactos.css
+++ b/css/contactos.css
@@ -193,6 +193,8 @@ header:hover {
   left: 0;
   z-index: 10;}
   .footer-content h3 {
+    font-size: 1.2em;
+    margin-bottom: 5px;
 
 /*añadi aca tu parte */
 .boton-le {
