Cerrando clase footer-content  h3

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -195,6 +195,7 @@ header:hover {
   .footer-content h3 {
     font-size: 1.2em;
     margin-bottom: 5px;
+  }
 
 /*añadi aca tu parte */
 .boton-le {
