Añadiendo clase footer-content a etiqueta P y A

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -196,6 +196,7 @@ header:hover {
     font-size: 1.2em;
     margin-bottom: 5px;
   }
+  .footer-content p a 
 
 /*añadi aca tu parte */
 .boton-le {
