--- a/css/contactos.css
+++ b/css/contactos.css
@@ -196,7 +196,12 @@ header:hover {
     font-size: 1.2em;
     margin-bottom: 5px;
   }
-  .footer-content p a 
+  .footer-content p a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: color 0.3s ease-in-out, opacity 0.3s;
+  
 
 /*añadi aca tu parte */
 .boton-le {
