--- a/css/contactos.css
+++ b/css/contactos.css
@@ -201,7 +201,7 @@ header:hover {
     text-decoration: none;
     margin: 0 10px;
     transition: color 0.3s ease-in-out, opacity 0.3s;
-  
+  }
 
 /*añadi aca tu parte */
 .boton-le {
