--- a/css/contactos.css
+++ b/css/contactos.css
@@ -202,6 +202,7 @@ header:hover {
     margin: 0 10px;
     transition: color 0.3s ease-in-out, opacity 0.3s;
   }
+  .footer-content p a:hover {
 
 /*añadi aca tu parte */
 .boton-le {
