--- a/css/contactos.css
+++ b/css/contactos.css
@@ -205,7 +205,7 @@ header:hover {
   .footer-content p a:hover {
     color: #ff0000;
    opacity: 0.8;
-
+  }
 
 /*añadi aca tu parte */
 .boton-le {
