Añadiendo clase copyright a css

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -206,7 +206,7 @@ header:hover {
     color: #ff0000;
    opacity: 0.8;
   }
-  .copyright {
+  .copyright {}
 
 /*añadi aca tu parte */
 .boton-le {
