--- a/css/contactos.css
+++ b/css/contactos.css
@@ -56,6 +56,9 @@ header {
   box-shadow: 0 8px 30px rgba(0,0,0,0.6);
   transition: transform var(--transition-fast), box-shadow var(--transition-fast), background var(--transition-fast);
 }
+header:hover {
+
+
 
 
 
