Añadiendo propiedad y valor a header hover

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -57,7 +57,8 @@ header {
   transition: transform var(--transition-fast), box-shadow var(--transition-fast), background var(--transition-fast);
 }
 header:hover {
-
+  transform: translateY(-2px);
+}
 
 
 
