Cerrando identificador navegacion ul

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -61,11 +61,10 @@ header:hover {
 }
 #navegacion ul {
   list-style:none;
-   display:flex; 
-   gap:28px; 
-   align-items:center;
-
-
+   display:flex;
+    gap:28px; 
+    align-items:center;
+   }
 
 
 
