Añadiendo identificaor navegacion A focus

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -76,6 +76,11 @@ padding:6px 4px;
 transition: color var(--transition-fast), transform var(--transition-fast);
 outline-offset:6px;
    }
+   #navegacion a:focus {
+
+   
+
+
 
 .logo img{
   height: 50px;
