--- a/css/contactos.css
+++ b/css/contactos.css
@@ -79,7 +79,8 @@ outline-offset:6px;
    #navegacion a:focus {
     box-shadow: 0 0 0 4px rgba(255,76,97,0.08); 
     border-radius:6px; 
-   
+   }
+   #navegacion a::after{
 
 
 
