Agregando efecto visual en links con activo y ::after

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -93,7 +93,8 @@ outline-offset:6px;
     transition: transform var(--transition-med) cubic-bezier(.2,.9,.2,1);
     border-radius: 6px;
    }
-
+   #navegacion a:hover::after,
+   #navegacion a.activo::after {
 .logo img{
   height: 50px;
 } 
