Añadiendo valores y propiedades navegacion link activo y ::after

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -95,6 +95,8 @@ outline-offset:6px;
    }
    #navegacion a:hover::after,
    #navegacion a.activo::after {
+    transform: scaleX(1); 
+   }
 .logo img{
   height: 50px;
 } 
