--- a/css/contactos.css
+++ b/css/contactos.css
@@ -241,7 +241,9 @@ outline-offset:6px;
   overflow: hidden;
   cursor: pointer;
   z-index: 1;
-  transition: color 0.3s;
+  transform-style: preserve-3d;
+  perspective: 500px;
+  transition: transform 0.3s ease, color 0.3s, background-color 0.3s;
 }
 
 .boton-le::before {
