--- a/css/contactos.css
+++ b/css/contactos.css
@@ -282,24 +282,13 @@ outline-offset:6px;
 
 .boton-le:hover {
   color: #860000;
+  transform: translateZ(15px) scale(1.05);
+
 }
 
-.boton-le {
-  background-color: #00000000;
-  color: rgb(255, 255, 255); 
-  border: none;
-  padding: 6px 12px;
-  border-radius: 5px;
-  display: inline-block;
-  text-decoration: none;
-  transition: transform 0.3s ease, background-color 0.3s ease;
-}
 
-.boton-le:hover {
-  background-color: #121212;
-  transform: scale(1.03);
-  color: #ffffff;
-}
+
+
 .footer-content h3 {
   font-size: 1.2em;
   margin-bottom: 5px;
