--- a/css/productos.css
+++ b/css/productos.css
@@ -11,10 +11,14 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.6;
-    color: #eaeaea;
-    background: #121212;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background: linear-gradient(135deg, rgb(6, 6, 6) , rgb(35, 35, 35) , rgba(22, 22, 22, 0.701));
+  background-size: 300% 300%;
+  animation: moverFondo 15s ease infinite;
+  position: relative;
 }
 
 #encabezado {
