--- a/css/productos.css
+++ b/css/productos.css
@@ -20,6 +20,9 @@ body{
   animation: moverFondo 15s ease infinite;
   position: relative;
 }
+@keyframes moverFondo {
+  
+}
 
 #encabezado {
     position: sticky;
