--- a/css/productos.css
+++ b/css/productos.css
@@ -25,7 +25,9 @@ body{
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
-
+header {
+    
+}
 
 h1 {
   margin-top: 28px;
