--- a/css/productos.css
+++ b/css/productos.css
@@ -44,6 +44,9 @@ header {
 header:hover { 
   transform: translateY(-2px);}
 #navegacion ul { list-style:none; display:flex; gap:28px; align-items:center; }
+#navegacion a {
+
+}
 
 h1 {
   margin-top: 28px;
