--- a/css/productos.css
+++ b/css/productos.css
@@ -55,6 +55,9 @@ header:hover {
   outline-offset:6px;
 }
 #navegacion a:focus { box-shadow: 0 0 0 4px rgba(255,76,97,0.08); border-radius:6px; }
+#navegacion a::after{
+    
+}
 
 h1 {
   margin-top: 28px;
