Agregando estilos al header con clase .scrolled

--- a/css/productos.css
+++ b/css/productos.css
@@ -70,7 +70,11 @@ header:hover {
 }
 #navegacion a:hover::after,
 #navegacion a.activo::after { transform: scaleX(1); }
-
+header.scrolled {
+    padding:8px 22px;
+    box-shadow: 0 12px 36px rgba(0,0,0,0.7);
+    transform: translateY(-4px);
+}
 
 h1 {
   margin-top: 28px;
