--- a/css/contactos.css
+++ b/css/contactos.css
@@ -8,16 +8,28 @@ body {
   animation: moverFondo 15s ease infinite;
    position: relative;
 }
-@media screen and (max-width: 600px) {
-  body {
-    font-size: 14px;
-  }
-}
-@media screen and (min-width: 992px) {
-  body {
+/*monitores grandes*/
+@media(min-wdth:1200px){
+  body{
     font-size: 18px;
   }
 }
+@media(max-width:1199px) and (min-width:992px){
+  body{
+    font-size:16px;
+  }
+}
+@media(max-width:991px) and (min-width:768px){
+  body{
+    font-size:15px;
+  }
+}
+@media(max-width:767){
+  body{
+    font-size: 14px;
+  }
+}
+
 @keyframes moverFondo {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
