Adaptando el diseño de .animaciones-fila para que los elementos se ajusten y centren

--- a/css/productos.css
+++ b/css/productos.css
@@ -319,3 +319,7 @@ article.taller p {
   .galeria {
     grid-template-columns: repeat(2, 1fr);
   }
+ .animaciones-fila {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
