--- a/css/productos.css
+++ b/css/productos.css
@@ -347,3 +347,9 @@ article.taller p {
     text-align: center;
     gap: 20px !important;
   }
+  .raul {
+    width: 100%;
+    height: auto;
+    max-width: 360px;
+    border-radius: 8px;
+  }
