Adaptando las secciones .galeria y .tres para mostrar una sola columna en pantallas pequeñas

--- a/css/productos.css
+++ b/css/productos.css
@@ -367,4 +367,11 @@ article.taller p {
   p, label, input, button {
     font-size: 14px;
   }
+  .galeria {
+    grid-template-columns: 1fr;
+  }
+
+  .tres {
+    grid-template-columns: 1fr;
+  }
 }
