--- a/css/index.css
+++ b/css/index.css
@@ -143,7 +143,10 @@ body {
     transition: transform 0.3s ease-out;
 }
 
-.animar
+.animar:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+}
 
 
 .main-footer {
