--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,11 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
+.resaltar {
+    transition: all 0.5s ease-in-out;
+}
+
+
 
 .main-footer {
     width: 100%;
