Agregando color neon para destacar texto.

--- a/css/index.css
+++ b/css/index.css
@@ -157,7 +157,14 @@ body {
     transform: scale(1.02);
 }
 
-.resaltar-neon
+.resaltar-neon {
+    transition: all 0.3s ease-in-out;
+    display: block;
+    color: #fff;
+    text-shadow: none;
+}
+
+
 .main-footer {
     width: 100%;
     background-color: #000; 
