--- a/css/productos.css
+++ b/css/productos.css
@@ -25,6 +25,9 @@ body{
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+.particula {
+  
+}
 header {
     display:flex;
     height: 80px;
