--- a/css/productos.css
+++ b/css/productos.css
@@ -36,6 +36,20 @@ body{
   opacity: 0.8;
   z-index: -1;
 }
+@keyframes flotar{
+  0% {
+    transform: translate(0, 0) scale(1);
+    opacity: 0.9;
+  }
+  50% {
+    transform: translate(20px, -50vh) scale(1.1);
+    opacity: 0.6;
+  }
+  100% {
+    transform: translate(-20px, -100vh) scale(0.8);
+    opacity: 0;
+  }
+}
 header {
     display:flex;
     height: 80px;
