--- a/css/index.css
+++ b/css/index.css
@@ -164,19 +164,24 @@ body {
     text-shadow: none;
 }
 
-
+.resaltar-neon:hover {
+    color: #ffffff;
+    text-shadow: 
+    0 0 5px #ffffff,
+    0 0 10px #ffffff;
+}
 .main-footer {
     width: 100%;
     background-color: #000; 
     color: #fff;
     text-align: center;
-    padding: 20px 0;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    padding: 15px 0;
+    border-top: 1px solid rgb(235, 15, 15);
+    position: fixed;
+    bottom: 0;
+    z-index: 10;
 }
 
-.footer-content {
-    margin-bottom: 10px;
-}
 
 .footer-content h3 {
     font-size: 1.2em;
@@ -187,7 +192,10 @@ body {
     color: #fff;
     text-decoration: none;
     margin: 0 10px;
+    transition: color 0.3s ease-in-out, opacity 0.3s;
 }
+
+
 
 .copyright {
     font-size: 0.8em;
