Haciendo cambios en footer.

--- a/css/index.css
+++ b/css/index.css
@@ -195,6 +195,10 @@ body {
     transition: color 0.3s ease-in-out, opacity 0.3s;
 }
 
+.footer-content p a:hover {
+    color: #ff0000;
+    opacity: 0.8;
+}
 
 
 .copyright {
