--- a/css/productos.css
+++ b/css/productos.css
@@ -412,3 +412,16 @@ article.taller p {
     font-size: 13px;
   }
 }
+
+.comentarios {
+  background-color: #1c1c1c;
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px; 
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
