--- a/css/productos.css
+++ b/css/productos.css
@@ -443,3 +443,15 @@ article.taller p {
   height: 120px; /* Aumenta la altura de la caja de comentarios */
   resize: vertical; /* Permite que el usuario la agrande si quiere */
 }
+
+.comentarios button {
+  width: 50%; 
+  background-color: transparent;
+  color: white;
+  border: 2px solid white;
+  padding: 8px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
